// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A bulleted List 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  padding: 0 0 0 1rem;
  list-style-type: disc;
}

.c2 {
  margin-bottom: 0.25rem;
}

<ul
  className="c0 c1"
>
  <li
    className="c2 c3"
  >
    🥑
  </li>
  <li
    className="c2 c3"
  >
    🍕
  </li>
  <li
    className="c2 c3"
  >
    🥨
  </li>
</ul>
`;

exports[`A default List, should be a ul 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  padding: 0 0 0 0;
  list-style-type: none;
}

.c2 {
  margin-bottom: 0.25rem;
}

<ul
  className="c0 c1"
>
  <li
    className="c2 c3"
  >
    🥑
  </li>
  <li
    className="c2 c3"
  >
    🍕
  </li>
  <li
    className="c2 c3"
  >
    🥨
  </li>
</ul>
`;

exports[`A numerically ordered List 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  padding: 0 0 0 1rem;
  list-style-type: decimal;
}

.c2 {
  margin-bottom: 0.25rem;
}

<ol
  className="c0 c1"
>
  <li
    className="c2 c3"
  >
    🥑
  </li>
  <li
    className="c2 c3"
  >
    🍕
  </li>
  <li
    className="c2 c3"
  >
    🥨
  </li>
</ol>
`;

exports[`A numerically ordered List marked as nomarker 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  padding: 0 0 0 0;
  list-style-type: none;
}

.c2 {
  margin-bottom: 0.25rem;
}

<ol
  className="c0 c1"
>
  <li
    className="c2 c3"
  >
    🥑
  </li>
  <li
    className="c2 c3"
  >
    🍕
  </li>
  <li
    className="c2 c3"
  >
    🥨
  </li>
</ol>
`;
